...
        return tableView
    }()
    
    private lazy var shareButton: CustomButton = {
        let button = CustomButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitle("Update Sharing", for: .normal)
        button.style = .themeBlue
        button.size = .large
        button.isPerfectlyRounded = true
        button.addTarget(self, action: #selector(shareButtonTapped), for: .touchUpInside)
        return button
    }()
...
