...
        button.layer.shadowColor = UIColor.fourthColor.cgColor
        button.layer.shadowOffset = CGSize(width: 0, height: 2)
        button.layer.shadowRadius = 4
        button.layer.shadowOpacity = 0.2
        button.addTarget(self, action: #selector(saveButtonTapped), for: .touchUpInside)
        button.accessibilityIdentifier = "place_detail_bookmark"
        button.accessibilityLabel = "Bookmark"
        button.isAccessibilityElement = true
        return button
    }()
    
    // MARK: - Initialization
    init(place: GMSPlace, isFromCollection: Bool) {
...
